fix(character): preserve nullable spell statistics in evaluation